2007-09-14 Damien Douxchamps http://damien.douxchamps.net/
        * SVN 429: Introduce a new type: dc1394id_t. It contains the GUID
	           and the unit number for unique identification. The function
		   dc1394_is_same_camera(id1, id2) can be used to compare ids.

2007-09-13 Damien Douxchamps http://damien.douxchamps.net/
        * SVN 428: Support for multi-unit cameras. Thanks to Karl Regier
	           for the patch. Tested with coriander and test_new_api,
		   but on Linux only.

2007-09-05 Damien Douxchamps http://damien.douxchamps.net/
        * SVN 427: Fixed borders in bayer.c (thanks to Johann Schoonees)

2007-09-03 Damien Douxchamps http://damien.douxchamps.net/
        * SVN 426: don't display warnings if a node is not a camera.
	
2007-08-28 Damien Douxchamps http://damien.douxchamps.net/
        * SVN 425: Image data returned in the dc1394_video_frame_t struct was
	           read-only (Linux). It doesn't cost anything to make it
		   writable, so from now on you can overwite captured image
		   data. Thanks to Ferenc Kahlesz for the modification.

2007-08-23 Damien Douxchamps http://damien.douxchamps.net/
        * SVN 424: - Change the split between dc1394_update_camera_info and
	             _dc1394_get_iidc_version so that getting the IIDC version
		     also gets the GUID at the same time. This reduces the
		     number of operations required to tell if a node is IIDC
		     compliant or not.
		   - dc1394camera_t member "euid_64"'s name changed to "guid"

2007-08-22 Damien Douxchamps http://damien.douxchamps.net/
	* SVN 423: moved the include of config.h into internal.h
	* SVN 422: little fixes in the new camera detection API.
        * SVN 421: Reverted some changes concerning where #includes are placed.
	           This was changed for windows compatibility but breaks
		   compilation of programs using the library (on Linux).

2007-08-20 Damien Douxchamps http://damien.douxchamps.net/